--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ src="https://www.facebook.com/tr?id=289727610868333&ev=PageView&noscript=1"
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #0c2461 0%, #1e3799 30%, #0c2461 100%);
+      background: url('gh.jpg');
       color: white;
       text-align: center;
       position: relative;
@@ -47,10 +47,7 @@ src="https://www.facebook.com/tr?id=289727610868333&ev=PageView&noscript=1"
       content: '';
       position: absolute;
       inset: 0;
-      background-image: 
-        linear-gradient(rgba(255, 255, 255, 0.05) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
-      background-size: 20px 20px;
+      background-image: url('gg.jpg') ;
       z-index: 0;
     }
 
@@ -296,4 +293,5 @@ src="https://www.facebook.com/tr?id=289727610868333&ev=PageView&noscript=1"
 </body>
 
 </html>
+
 
