--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ src="https://www.facebook.com/tr?id=289727610868333&ev=PageView&noscript=1"
       display: flex;
       justify-content: center;
       align-items: center;
-      background: url('gh.jpg');
+      background: url('logo.jpg');
       color: white;
       text-align: center;
       position: relative;
@@ -293,5 +293,6 @@ src="https://www.facebook.com/tr?id=289727610868333&ev=PageView&noscript=1"
 </body>
 
 </html>
+
 
 
